<?xml version="1.0"?>
<package format="3">
  <name>nav2_straightline_planner</name>
  <version>0.0.1</version>
  <description>Un semplice planner che genera percorsi in linea retta per Nav2.</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nav2_core</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/global_planner_plugin.xml"/>
  </export>
</package>
